questObject parallelization methods

--- a/Quest_Data_Builder.csproj
+++ b/Quest_Data_Builder.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
     <PackageReference Include="CXuesong.Luaon" Version="0.2.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
