--- a/Config/config.json
+++ b/Config/config.json
@@ -52,6 +52,10 @@
 	//Number of stages in a quest (journal-type dialogue) for its information to be saved.
 	"stagesNumToAddQuestInfo": 1,
 
+	//Enable generation and saving of the height map image
+	"enableHeightMapImageGeneration": true,
+	//Downscale factor for height map image. 1 - full size (64x64 for one cell).
+	"heightMapImageDownscaleFactor": 2,
 
 	//Try to find information about dialogues that can open quest dialogues.
 	"findDialogueLinks": true,
