--- a/Quest_Data_Builder.csproj
+++ b/Quest_Data_Builder.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
     <PackageReference Include="CXuesong.Luaon" Version="0.2.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
 </Project>
