rename height map image generation config option

--- a/Config/config.json
+++ b/Config/config.json
@@ -55,8 +55,8 @@
 	//Generate a file with function/variable requirements needed for dialogue topics to become available.
 	"generateDialogueTopicRequirements": false,
 
-	//Enable generation and saving of the height map image
-	"enableHeightMapImageGeneration": true,
+	//Enable or disable generation and saving of the height map image. Default is false.
+	"generateHeightMapImage": true,
 	//Downscale factor for height map image. 1 - full size (64x64 for one cell).
 	"heightMapImageDownscaleFactor": 2,
 
